--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -126,7 +126,7 @@ select::-ms-expand {
     select {
         height: 35px;
         //line-height: 44px;
-        border-radius: 10px;
+        border-radius: $border-radius;
         border: 0;
         background-color: #ffffff;
 
@@ -221,7 +221,7 @@ select::-ms-expand {
 
 textarea {
     width: 100%;
-    border-radius: 10px;
+    border-radius: $border-radius;
     //border: 2px solid $darkestWhite;
     background-color: #ffffff;
     padding: 1rem;
