--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -1,8 +1,7 @@
 .header-wrapper {
     background: $turq;
-    //width: $fullWidth;
-    width: 100%;
     text-align: center;
+    padding: 10px 0;
 }
 
 //HEADER SECTION
