--- a/resources/sass/components/_banner.scss
+++ b/resources/sass/components/_banner.scss
@@ -1,18 +1,14 @@
 //BANNER SECTION
-.banner-parent {
-    width: 100%;
-    height: auto;
-}
-
 .banner {
-    background-image: url(/images/banner-flipped.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    position: relative;
-    padding: 75px 0;
+    @include media-breakpoint-up(lg){
+        background-image: url(/images/banner-flipped.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+        @include mask($bannerMaskGreen, 0.06);
+    }
 
-    @include mask($bannerMaskGreen, 0.06);
+    position: relative;
 
     > * {
         position: relative;
@@ -33,14 +29,13 @@
 .banner-form-wrapper {
     border-radius: 5px;
     background-color: #fff;
-    padding: 15px;
-    @include media-breakpoint-up(md){
+    @include media-breakpoint-up(lg){
         padding: 40px 30px;
+        box-shadow: $box-shadow;
     }
     text-align: center;
     position: relative;
     z-index: 5;
-    @extend .shadow;
 
     .postcode-parent {
         .input-wrapper {
@@ -59,7 +54,6 @@
     }
 
     &.flat-form {
-        //padding: 30px 40px 30px;
         @include media-breakpoint-up(lg){
             min-width: 1028px;
 
