--- a/resources/sass/layout/_footer.scss
+++ b/resources/sass/layout/_footer.scss
@@ -5,7 +5,10 @@
 }
 
 // FOOTER SECTION
-.footer {
+footer {
+    padding: 75px 0;
+    background-color: $body-color;
+
     * {
         color: $white;
     }
@@ -20,27 +23,35 @@
 }
 
 .footer-upper {
-    background-color: $body-color;
-    padding-top: 75px;
-
     &__menu {
         list-style-type: none;
 
         li {
-            margin-bottom: 15px;
+            //margin-bottom: 15px;
             display: inline-block;
 
             a {
-                @include font-size(22);
+                @include font-size(1.2rem);
                 @extend .SofiaPro-Medium;
                 padding-right: 20px;
             }
         }
     }
 
+    &__secondary-menu li > a {
+        padding: 0 20px 0 0;
+        font-size: 1rem;
+        display: inline-block;
+    }
+
+    .helping-you {
+        @include font-size(1rem);
+        @include media-breakpoint-up(lg) {
+            @include font-size(1.2rem);
+        }
+    }
 
     .social {
-        //margin-top: 80px;
         text-align: right;
 
         ul {
@@ -48,24 +59,28 @@
 
             li {
                 list-style: none;
-                margin-left: 20px;
+
+                &:not(:first-child) {
+                    margin-left: 20px;
+                }
+
                 display: inline-flex;
 
                 &.facebook-social {
                     svg {
-                        width: 20px;
+                        width: 17px;
                     }
                 }
 
                 &.twitter-social {
                     svg {
-                        width: 38px;
+                        width: 30px;
                     }
                 }
 
                 &.instagram-social {
                     svg {
-                        width: 38px;
+                        width: 30px;
                     }
                 }
 
@@ -91,10 +106,10 @@
     }
 }
 
-.footer-middle {
-    background-color: #1b1b1b;
-    padding: 50px 0;
+.footer-lower {
+    background-color: $body-color;
     overflow: hidden;
+
 
     .svg-wrap {
         margin: 0 -20px;
@@ -111,24 +126,6 @@
                     //animation-delay: 1s;
                     animation-fill-mode: forwards;
                 }
-            }
-        }
-    }
-}
-
-.footer-lower {
-    background-color: $footerBackgroundColour;
-
-    &__menu {
-        margin-left: -15px;
-        list-style-type: none;
-
-        li {
-            display: inline-block;
-
-            > a {
-                display: inline-block;
-                padding: 0 15px;
             }
         }
     }
