--- a/resources/sass/pages/_homePage.scss
+++ b/resources/sass/pages/_homePage.scss
@@ -38,16 +38,28 @@
 .faqs-section {
     .accordion {
         .card {
-            padding-left: 180px !important;
-            margin-bottom: 20px !important;
+            @include media-breakpoint-down(md) {
+                padding-top: 110px;
+            }
+            margin-bottom: 20px;
 
             &:before {
                 content: '';
+                position: absolute;
                 background-image: url('/images/icons/faq-data.svg');
                 width: 60px;
                 height: 60px;
-                @include v-c;
-                left: 60px;
+                left: 30px;
+                top: 30px;
+            }
+
+            @include media-breakpoint-up(lg) {
+                padding-left: 180px !important;
+
+                &:before {
+                    @include v-c;
+                    left: 60px;
+                }
             }
 
             .btn-link {
@@ -55,10 +67,6 @@
                 &:after {
                     display: none !important;
                 }
-            }
-
-            .card-header {
-
             }
 
             .btn-link,
