--- a/resources/sass/components/basic/_select.scss
+++ b/resources/sass/components/basic/_select.scss
@@ -34,7 +34,7 @@
     &.big {
         // Button added by BS select
         .dropdown-toggle {
-            padding: 16px 60px;
+            padding: 16px 60px 16px 50px;
             width: 100%;
             //border-radius: 10px;
             color: $darkerGrey;
