Using SVG directive in place of file_get_contents

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -162,23 +162,23 @@ $container-max-widths: (
     xl: 1200px
 );
 
-// Base Colors for range slider
-$shade-10: #1b70f3 !default;
-$shade-1: #d7dcdf !default;
-$shade-0: #fff !default;
-
-// Range Slider
-$range-width: 100% !default;
-
-$range-handle-color: $shade-10 !default;
-$range-handle-color-hover: $turq !default;
-$range-handle-size: 22px !default;
-
-$range-track-color: $shade-1 !default;
-$range-track-height: 4px !default;
-
-$range-label-color: $shade-10 !default;
-$range-label-width: 60px !default;
+//// Base Colors for range slider
+//$shade-10: #1b70f3 !default;
+//$shade-1: #d7dcdf !default;
+//$shade-0: #fff !default;
+//
+//// Range Slider
+//$range-width: 100% !default;
+//
+//$range-handle-color: $shade-10 !default;
+//$range-handle-color-hover: $turq !default;
+//$range-handle-size: 22px !default;
+//
+//$range-track-color: $shade-1 !default;
+//$range-track-height: 4px !default;
+//
+//$range-label-color: $shade-10 !default;
+//$range-label-width: 60px !default;
 
 // Navs and tabs
 
