Editing mobile results page layout

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -644,3 +644,10 @@
         pointer-events: none;
     }
 }
+
+/********* Mobile results layout ************/
+.results-page-mobile {
+    .results-item-mobile {
+
+    }
+}
