Reinstate compare functionality mobile

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -150,6 +150,10 @@ select.big {
     background-color: $violet;
 }
 
+.bg-purple {
+    background-color: $purple;
+}
+
 .bg-hanblue {
     background-color: $hanblue;
 }
