--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -406,6 +406,21 @@
             width: 20px;
             height: 20px;
         }
+
+        &_mobile {
+            &:after {
+                content: '';
+                position: absolute;
+                left: 100%;
+                top: 0;
+                width: 30px;
+                height: 30px;
+                border-bottom: solid 15px transparent;
+                border-right: solid 15px transparent;
+                border-left: solid 15px $pink;
+                border-top: solid 15px $pink;
+            }
+        }
     }
 
     &.btn-special-offer-reverse {
