Add back in corporate content area. Hide help button.

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -183,7 +183,7 @@ select.big {
 //}
 
 .bg-grey {
-    background-color: $lighterGrey;
+    background-color: $lighterGrey !important;
 }
 
 .bg-white {
