Mobile solutions bar

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -709,4 +709,8 @@
             justify-content: space-between;
         }
     }
+
+    .special-offer-header {
+        height: 50px !important;
+    }
 }
