--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -108,7 +108,7 @@ $popover-max-width: 500px;
 
 // Modal
 $modal-inner-padding: 0;
-$modal-content-border-radius: 16px;
+$modal-content-border-radius: $border-radius;
 $modal-content-border-width: 0;
 $zindex-modal-backdrop: 1080;
 $zindex-modal: 1085;
