--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -408,18 +408,19 @@
         }
 
         &_mobile {
-            &:after {
-                content: '';
-                position: absolute;
-                left: 100%;
-                top: 0;
-                width: 30px;
-                height: 30px;
-                border-bottom: solid 15px transparent;
-                border-right: solid 15px transparent;
-                border-left: solid 15px $pink;
-                border-top: solid 15px $pink;
-            }
+            color: $pink;
+            //&:after {
+            //    content: '';
+            //    position: absolute;
+            //    left: 100%;
+            //    top: 0;
+            //    width: 30px;
+            //    height: 30px;
+            //    border-bottom: solid 15px transparent;
+            //    border-right: solid 15px transparent;
+            //    border-left: solid 15px $pink;
+            //    border-top: solid 15px $pink;
+            //}
         }
     }
 
@@ -491,6 +492,10 @@
 .btn-link {
     color: $darkerGrey;
     cursor: pointer;
+    appearance: none;
+    border: none;
+    background-color: transparent;
+    text-decoration: underline;
 
     &:hover,
     &:focus {
