--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -63,13 +63,6 @@
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
         }
 
-        .filter-parent {
-            //display: none;
-
-            .dropdown-toggle {
-                @include font-size(14);
-            }
-        }
     }
 
     .submit-section {
@@ -124,6 +117,10 @@
         background-color: $white;
         padding-top: 23px;
         display: none;
+
+        .dropdown-toggle {
+            @include font-size(14);
+        }
     }
 
     .postcode-radius,
@@ -653,16 +650,16 @@
         pointer-events: none;
     }
 
-
+    &.results-page-mobile {
+        .filter-parent {
+            height: 70vh;
+            overflow: scroll;
+        }
+    }
 }
 
 /********* Mobile results layout ************/
 .results-page-mobile {
-    .filter-parent {
-        height: 70vh;
-        overflow: scroll;
-    }
-
     .row {
         @include reset-row-spacing(0.5rem);
     }
